--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <thead>
                 <tr> 
                     <th colspan="2">Code</th>
-                    <th>Description</th>
+                    <th>Descriptions</th>
                     <th>Example</th>
                 </tr>
             </thead>
